[package]
name = "simple-sdmmc"
version = "0.1.0"
description = "A simple SD/MMC driver based on SDIO."
edition = "2024"
authors = ["Asakura Mizu <asakuramizu111@gmail.com>"]
publish = ["crates-io"]

[features]
default = []
gpt = ["dep:gpt_disk_io"]

[dependencies]
bitfield-struct = "0.11.0"
gpt_disk_io = { version = "0.16.2", optional = true }
log = "0.4.27"
volatile = { version = "0.6.1", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
