[package]
name = "simple-sdmmc"
version = "0.2.0"
description = "A simple SD/MMC driver with eMMC support based on SDIO."
edition = "2024"
authors = ["Asakura Mizu <asakuramizu111@gmail.com>"]
publish = ["crates-io"]
keywords = ["sdmmc", "emmc", "sd-card", "embedded", "no-std"]
categories = ["embedded", "hardware-support"]
repository = "https://github.com/your-repo/simple-sdmmc"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
bitfield-struct = "0.11.0"
log = "0.4"
volatile = { version = "0.6.1", features = ["derive"] }
